<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.example.icafe.detail.DetailFragment">

    <data>
        <variable name="detailViewModel" type="com.android.example.icafe.detail.DetailViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F39C12">

        <TextView
            android:id="@+id/manage_detailText"
            style="@style/login_loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/detail_detailText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/detail_nameInput"
            style="@style/login_loginInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/detail_nameHint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manage_detailText" />

        <Button
            android:id="@+id/manage_submitButton"
            style="@style/login_loginButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="110dp"
            android:fontFamily="roboto"
            android:text="@string/detail_submitText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_ageInput"
            android:onClick="@{ () -> detailViewModel.submitEnter()  }"/>

        <EditText
            android:id="@+id/detail_ageInput"
            style="@style/login_loginInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/detail_ageHint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_nameInput" />

        <TextView
            android:id="@+id/comNumberText"
            style="@style/login_loginInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="195dp"
            android:layout_marginBottom="20dp"
            android:text="@string/detail_ComputerNoText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/comNumberValue"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/comNumberValue"
            style="@style/login_loginInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/comNumberText"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{ detailViewModel.dataSelected.toString() }"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>