<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="loginViewModel" type="com.android.example.icafe.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.android.example.icafe.login.LoginFragment"
        android:background="#F39C12">

        <EditText
            android:id="@+id/usernameInput"
            style="@style/login_loginInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/login_usernameHint"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.24000001" />

        <EditText
            android:id="@+id/passwordInput"
            style="@style/login_loginInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/login_passwordHint"
            android:inputType="textPassword"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

        <Button
            android:id="@+id/loginButton"
            style="@style/login_loginButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="roboto"
            android:text="@string/login_loginText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput"
            android:onClick="@{ () -> loginViewModel.loginEnter()}"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="233dp"
            android:layout_height="198dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/icafe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>